--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "parcel-plugin-clean-easy": "^1.0.2"
   },
   "scripts": {
-    "dev": "parcel ./src/index.html",
-    "build": "parcel build ./src/index.html --public-url ./",
-    "deploy": "parcel build ./src/index.html --public-url ./ && gh-pages -d dist"
+    "dev": "parcel index.html",
+    "build": "parcel build index.html --public-url ./",
+    "deploy": "parcel build index.html --public-url ./ && gh-pages -d dist"
   },
   "author": "",
   "license": "ISC"
